Optimizations & bug fix